# Digital-Analysis-of-Fingerprints-MSIAM

./: README.md
Project_Infra/: exe_building.sh
Project_Infra/docs/html/: Part3_8cpp.html  PictureRotations_8cpp.html  Picture_8cpp.html  Picture_8h.html  Picture__Optimization_8cpp.html  Useful__functions_8cpp.html  annotated.html  classPicture-members.html  classPicture.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  menudata.js
Project_Infra/docs/html/search/: all_0.js  all_11.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_0.js  files_1.js  functions_1.js  functions_3.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  functions_f.js  searchdata.js
Project_Infra/src/: Part1.cpp  Part3.cpp  Picture.cpp  Picture.h  PictureRotations.cpp  Picture_Optimization.cpp  Useful_functions.cpp  Useful_functions.h
infra/Project_Infra/include/: Picture.h
infra/Project_Infra/src/: CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  Part1.cpp  Picture.cpp  Picture.h  Picture2.cpp  PictureRotations.cpp  Picture_Optimization.cpp  Report_maxim.tex  Usefull_functions.cpp  Usefull_functions.h  boximage  boximage.cpp  main.cpp  plot_error_projet.py  presentation.tex  report.tex  swirl_test.cpp  test.cpp
infra/Project_Infra/src/Optimization_Part/: Picture.cpp  Picture.h  Usefull_functions.cpp  auto_exec.sh  main.cpp
infra/Project_Infra/tests/: geom_test1.cpp  geom_test2.cpp  geom_test3.cpp
